--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="@string/maps_api_key"/>
     <activity
       android:label="@string/app_name"
       android:name=".MainActivity">
@@ -31,5 +34,7 @@
   </application>
 
   <uses-permission android:name="android.permission.INTERNET" />
-
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
