--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.team41.boromi">
+  package="com.team41.boromi">
 
   <application
     android:allowBackup="true"
@@ -17,21 +17,23 @@
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".TestActivity">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".BookActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".TestRequestBookActivity"/>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity android:name=".TestActivity">
+      <intent-filter>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity
+      android:label="@string/app_name"
+      android:name=".BookActivity" />
+    <activity android:name=".TestRequestBookActivity" />
+  </application>
 
+  <uses-feature
+    android:name="android.hardware.camera"
+    android:required="true" />
   <uses-permission android:name="android.permission.INTERNET" />
-  <uses-feature android:name="android.hardware.camera" android:required="true" />
 
 </manifest>
