--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     android:name=".BoromiApp"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:theme="@style/AppTheme">
 
     <activity
       android:label="@string/app_name"
