Attempting to add ci for running android tests

--- a/.github/workflows/ci-build-check.yaml
+++ b/.github/workflows/ci-build-check.yaml
@@ -13,3 +13,14 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build
+  test:
+    runs-on: macos-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v2
+
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 26
+        script: ./gradlew connectedCheck
