--- a/.github/workflows/ci-build-check.yaml
+++ b/.github/workflows/ci-build-check.yaml
@@ -19,8 +19,8 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2
 
-    - name: run tests
-      uses: reactivecircus/android-emulator-runner@v2
+    - name: Android Emulator Runner
+      uses: ReactiveCircus/android-emulator-runner@v2.12.0
       with:
         api-level: 26
         script: ./gradlew connectedCheck
