--- a/.github/workflows/ci-build-check.yaml
+++ b/.github/workflows/ci-build-check.yaml
@@ -13,4 +13,15 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build
-  
+  test:
+    runs-on: macos-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v2
+
+    - name: Android Emulator Runner
+      uses: ReactiveCircus/android-emulator-runner@v2.12.0
+
+      with:
+        api-level: 29
+        script: ./gradlew connectedCheck
