--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.team41.boromi">
-
+<uses-permission android:name="android.permission.INTERNET" />
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:name=".BoromiApp"
+    android:usesCleartextTraffic="true"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
@@ -23,7 +24,23 @@
     <activity
       android:label="@string/app_name"
       android:name=".BookActivity" />
+
+    <service android:name=".dbs.BoromiFirebaseMessaging"
+      android:exported="false">
+      <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+      </intent-filter>
+
+      <meta-data
+        android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@drawable/logo_boromi_text" />
+      <meta-data
+        android:name="com.google.firebase.messaging.default_notification_color"
+        android:resource="@color/colorPrimary" />
+    </service>
   </application>
+
+
 
   <uses-feature
     android:name="android.hardware.camera"
