--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-
+    <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="@string/maps_api_key"/>
     <activity
       android:label="@string/app_name"
       android:name=".MainActivity">
@@ -46,5 +48,7 @@
     android:name="android.hardware.camera"
     android:required="true" />
   <uses-permission android:name="android.permission.INTERNET" />
-
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
