added barcode for exchanging (#114)
* added barcode for exchanging

* fixed build failure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 }
